[tool.poetry]
name = "geolocation"
version = "0.1.0"
description = ""
authors = ["Mohammed Anjum <anjum@sahl.solutions>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
geoip2 = "^4.6.0"
fastapi = "^0.95.1"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-decouple = "^3.8"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
ipython = "^8.12.0"
devtools = "^0.11.0"
icecream = "^2.1.3"


[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"
pytest-mock = "^3.10.0"
pytest-benchmark = "^4.0.0"


[tool.poetry.group.cdktf.dependencies]
cdktf = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
  "."
]
filterwarnings = [
  "ignore:::.*",
] 

asyncio_mode = "auto"

